--- a/css/app.css
+++ b/css/app.css
@@ -1,14 +1,12 @@
-html,
-body{
-	height: 100%;
-  width: auto;
+html{
+	min-height: 100%;
 }
 body{
 	font-family: sans-serif;
-	font-size: 48px;
-	background-image: url(https://i.imgur.com/ymQ4nbKh.jpg);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+/*	font-size: 28px;
+*/	background-image: url(https://i.imgur.com/ymQ4nbKh.jpg);
+	background-repeat: no-repeat, repeat-y;
+	background-attachment: fixed, scroll;
 	background-position: center;
 	background-size: cover;
 	z-index: -1;
@@ -16,20 +14,21 @@ body{
 }
 
 .gradient{
-	background-image: linear-gradient( to left, #121DB3, #04094A, #000000);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+	background: linear-gradient( to left, #121DB3, #04094A, #000000) fixed;
+	
+  background-attachment: scroll;
+	background-repeat: repeat-y;
+	background-size: 100%;
 	opacity: .75;
 	z-index: -1;
 	width: auto;
-	height: 100%;
+	/*height: 100%;*/
 	padding-bottom: 100%;
 
 }
 .overlay{
 	 opacity: .9;
-    position: absolute;
+    position: fixed;
     z-index: -1;
     padding-bottom: 100%;
     top: 0px;
@@ -41,31 +40,52 @@ body{
 /*
 *	HEADER
 */
-.justify{
+#justify{
+  
+  position: fixed;
+  right: 35px;
+  top: 38.86px;
 	z-index: 1;
-    color: #000;
-    float: right;
-    padding: 
-    font-weight: bold
+  color: #000;
+  float: right; 
+  font-weight: bold
 
 }
-.justify:hover{
-    color: rgb(0,0,0);
-    cursor: pointer;
+#justify:hover{
+  color: rgb(0,0,0);
+  cursor: pointer;
+
+ }
+ #picture{
+  float: left;
+  left: 35px;
+  border-radius: 25%;
+  height: 73px;
+ }
+ #title_one{
+  color: white;
+  margin-bottom: 0px;
+ }
+ #title_two{
+  color: white;
+  margin-top: 0px;
  }
 .nav {
-    height: 100%;
-    width: 0;
-    position: absolute; 
-    z-index: 1;
-    background-color: rgba(0,0,0,0.4); 
-    overflow: hidden;
-    transition: .3s;
+  top: 0;
+  visibility: visible;
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: fixed; 
+  z-index: 1;
+  background-color: rgba(0,0,0,0.4); 
+  overflow: hidden;
+  transition: .3s;
 }
 .nav__item {
   display: unset !important;
   color: rgb(225,225,225);
-  padding: 48px
+  padding: 48px;
   line-height: 50px;
 }
 #padding{
@@ -73,7 +93,7 @@ body{
 }
 .nav__list {
   color: rgb(000,000,000);
-display: flex;
+  display: flex;
   flex-direction: column;
   height: 100%;
   top: 0px;
@@ -82,11 +102,14 @@ display: flex;
   right: 0px;
 }
 
-#closebtn{
+/*#closebtn{
   display: unset !important;
   font-size: 100px;
   padding: 15px 15px 15px 15px;
   float: right;
+}*/
+#closebtn:hover{
+  cursor: pointer;
 }
 .hide{
   display: unset !important;
@@ -100,20 +123,172 @@ display: flex;
   display: flex;
   text-align: center;
   font-size: 48px;
-  padding: 48px 48px 48px 48px;
+  padding: 48px;
 }
 a:hover{
   color: green;
 }
 
-.header__title{
-  font-weight: 100;
-  font-size: 3em;
-}
+
 .top-news{
   display: unset !important;
- height: 175px;
+  height: 175px;
 }
-#float{
-  float: right;
+.mission{
+  height: 718px;
+}
+.borderB{
+  border-bottom: 2px solid white;
+
+}
+.hr{
+  border-bottom: 2px solid black;
+}
+.down{
+  margin-top: 48px;
+}
+.far,
+.fa-hand-point-down{
+  font-size: 48px;
+ }
+ .far,
+.fa-hand-point-down:hover{
+  cursor: pointer;
+}
+
+/**********  SCREENS AT LEAST 375PX WIDE! **********/
+
+
+
+@media screen and (max-width: 375px){
+
+.container{
+  padding: 5px;
+}
+.hr{
+  border-bottom: 2px solid white;
+}
+.fullPage{
+  height: 100vh;
+  width: auto;
+}
+
+
+
+  /*
+  *
+  * HEADER
+  *
+  */
+  #justify{
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    z-index: 10;
+    color: #000; 
+  }
+  .fas,
+  .fa-align-justify{
+    margin-top:4px;
+    color: white;
+    font-size: 2em;
+  }
+  #title_one{
+    color: white;
+    margin-bottom: 0px;
+    font-size: 20px;
+    left: 15;
+  }
+  #title_two{
+    color: white;
+    margin-top: 0px;
+    font-size: 12px;
+  }
+  #picture{
+  float: left;
+  left: 35px;
+  border-radius: 50%;
+  height: 58px;
+  margin-right: 15px;
+ }
+
+ .nav__item{
+  display: unset !important;
+  color: rgb(225,225,225);
+  height: 5px;
+  display: flex;
+  text-align: center;
+  padding: 48px;
+}
+ #navList{
+  font-size: 15px;
+}
+.nav__list {
+  color: rgb(000,000,000);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  top: 0px;
+  bottom:0px;
+  left: 0px;
+  right: 0px;
+}
+ #closebtn{
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  z-index: 1;
+  color: #000;
+  font-size: 2em
+}
+ .fas,
+ .fa-times{
+  color: white;
+  font-size: 2em;
+}
+
+/****************************************************/
+
+/*
+*
+* MISSION STATEMENT
+*
+*/
+.spacing{
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.mission{
+  /*background-color: rgb(225,225,225);*/
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+#mission{
+  color: white;
+  float: left;
+  font-size: 1em;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+#missionText{
+  color: white;
+  font-size: 10px;
+}
+.down{
+  margin-top: 48px;
+}
+.far,
+.fa-hand-point-down{
+  font-size: 48px;
+ }
+.header__title{
+  color: white;
+  font-weight: 100;
+  font-size: 1em;
+}
 }
